--- a/package.json
+++ b/package.json
@@ -1,41 +1,44 @@
 {
   "name": "vinted-crm",
-  "version": "0.1.0",
+  "version": "1.0.0",
+  "description": "CRM personnalisé pour Vinted avec suivi comptable et graphiques interactifs",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "format": "prettier --write .",
+    "db:push": "prisma db push",
+    "db:studio": "prisma studio"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "^15.0.0",
-    "@supabase/supabase-js": "^2.43.0",
-    "@supabase/auth-helpers-nextjs": "^0.10.0",
-    "@supabase/auth-helpers-react": "^0.4.0",
-    "tailwindcss": "^4.0.0",
-    "recharts": "^2.12.0",
-    "chart.js": "^4.4.0",
-    "react-chartjs-2": "^5.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "next": "^14.0.0",
+    "@supabase/supabase-js": "^2.38.0",
+    "@supabase/auth-helpers-nextjs": "^0.8.0",
+    "recharts": "^2.10.0",
+    "lucide-react": "^0.292.0",
+    "date-fns": "^2.30.0",
     "axios": "^1.6.0",
     "zustand": "^4.4.0",
-    "clsx": "^2.0.0",
-    "classnames": "^2.3.0"
+    "classnames": "^2.3.0",
+    "csv-parser": "^3.0.0",
+    "papaparse": "^5.4.1"
   },
   "devDependencies": {
     "typescript": "^5.3.0",
-    "@types/react": "^19.0.0",
-    "@types/react-dom": "^19.0.0",
     "@types/node": "^20.10.0",
-    "autoprefixer": "^10.4.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "tailwindcss": "^3.3.0",
     "postcss": "^8.4.0",
-    "@typescript-eslint/eslint-plugin": "^6.13.0",
-    "@typescript-eslint/parser": "^6.13.0",
-    "eslint": "^8.54.0",
-    "eslint-config-next": "^15.0.0",
-    "tailwindcss": "^4.0.0"
+    "autoprefixer": "^10.4.0",
+    "eslint": "^8.55.0",
+    "eslint-config-next": "^14.0.0",
+    "prettier": "^3.1.0",
+    "@types/papaparse": "^5.3.0"
   }
 }
